RESOLVED FIXED312570
REGRESSION(311442@main): No member named 'updateContentsHeadroom' in 'WebKit::RemoteMesh'; did you mean 'Messages::RemoteMesh::UpdateContentsHeadroom'
https://bugs.webkit.org/show_bug.cgi?id=312570
Summary REGRESSION(311442@main): No member named 'updateContentsHeadroom' in 'WebKit:...
Jonathan Bedard
Reported 2026-04-17 07:23:29 PDT
https://commits.webkit.org/311442@main introduced a build failure, "No member named 'updateContentsHeadroom' in 'WebKit::RemoteMesh'; did you mean 'Messages::RemoteMesh::UpdateContentsHeadroom'?
Attachments
Jonathan Bedard
Comment 1 2026-04-17 07:23:31 PDT
Jonathan Bedard
Comment 2 2026-04-17 07:24:23 PDT
EWS
Comment 3 2026-04-17 07:31:25 PDT
Committed 311451@main (8c919633f147): <https://commits.webkit.org/311451@main> Reviewed commits have been landed. Closing PR #62972 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.