REGRESSION(311442@main): No member named 'updateContentsHeadroom' in 'WebKit::RemoteMesh'; did you mean 'Messages::RemoteMesh::UpdateContentsHeadroom' https://bugs.webkit.org/show_bug.cgi?id=312570 rdar://175007544

Unreviewed build fix.

* Source/WebKit/GPUProcess/graphics/Model/RemoteMesh.h:

Canonical link: https://commits.webkit.org/311451@main